# RPi-Pico-VScode-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: clean.sh  download_docs.sh  flash.sh  launch_debugger.sh  launch_serial_monitor.sh  setup.sh
src/: blink.pio  main.c
